tests/NormalTests/paczka1/fuzzy1/98726083.err
Error in line 10: h5M8YLEFRjN A310 -3,9
Error in line 13: CIEsvOIj26S A128 1,40
Error in line 9: h5M8YLEFRjN A310 68,4
